--- a/TubumuMeeting.Demo.Client/MainWindow.xaml
+++ b/TubumuMeeting.Demo.Client/MainWindow.xaml
@@ -5,14 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TubumuMeeting.Demo.Client"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="480" Width="800">
     <Grid Margin="0,0,193.333,50.667">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="109*"/>
             <ColumnDefinition Width="288*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="connectButton" Content="Connect" HorizontalAlignment="Left" Margin="275.333,63,0,0" VerticalAlignment="Top" Width="95" Click="connectButton_Click" Height="41" Grid.Column="1" />
-        <Button x:Name="sendButton" Content="Send Message" HorizontalAlignment="Left" Margin="275.333,113,0,0" VerticalAlignment="Top" Width="95" Click="sendButton_Click" Height="41" Grid.Column="1" IsEnabled="False"/>
+        <Button x:Name="ConnectButton" Content="Connect" Click="ConnectButton_Click" HorizontalAlignment="Left" Margin="280,60,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" />
+        <Button x:Name="JoinButton" Content="Join Room" Click="JoinButton_Click" HorizontalAlignment="Left" Margin="280,100,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
+        <Button x:Name="JoinRoomButton" Content="Join Room" Click="JoinRoomButton_Click" HorizontalAlignment="Left" Margin="280,140,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
+        <Button x:Name="GetRouterRtpCapabilitiesButton" Content="Get Router RtpCapabilities" Click="GetRouterRtpCapabilitiesButton_Click" HorizontalAlignment="Left" Margin="280,180,0,0" VerticalAlignment="Top" Width="95" Height="36" Grid.Column="1" IsEnabled="False"/>
         <TextBox x:Name="messageTextBox" HorizontalAlignment="Left" Height="41" Margin="82,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="311" Grid.ColumnSpan="2"/>
         <ListBox x:Name="messagesList" HorizontalAlignment="Left" Height="141" Margin="82,170,0,0" VerticalAlignment="Top" Width="311" RenderTransformOrigin="-0.304,0.109" BorderThickness="1" Grid.ColumnSpan="2" BorderBrush="Gainsboro"/>
         <Label Content="RoomId" HorizontalAlignment="Left" Height="26" Margin="19,120,0,0" VerticalAlignment="Top" Width="58"/>
