--- a/TubumuMeeting.Demo.Client/MainWindow.xaml
+++ b/TubumuMeeting.Demo.Client/MainWindow.xaml
@@ -12,8 +12,8 @@
             <ColumnDefinition Width="288*"/>
         </Grid.ColumnDefinitions>
         <Button x:Name="ConnectButton" Content="Connect" Click="ConnectButton_Click" HorizontalAlignment="Left" Margin="280,60,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" />
-        <Button x:Name="JoinButton" Content="Join Room" Click="JoinButton_Click" HorizontalAlignment="Left" Margin="280,100,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
-        <Button x:Name="JoinRoomButton" Content="Join Room" Click="JoinRoomButton_Click" HorizontalAlignment="Left" Margin="280,140,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
+        <Button x:Name="JoinButton" Content="Join" Click="JoinButton_Click" HorizontalAlignment="Left" Margin="280,100,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
+        <Button x:Name="EnterRoomButton" Content="Enter Room" Click="EnterRoomButton_Click" HorizontalAlignment="Left" Margin="280,140,0,0" VerticalAlignment="Top" Width="95" Height="30" Grid.Column="1" IsEnabled="False"/>
         <Button x:Name="GetRouterRtpCapabilitiesButton" Content="Get Router RtpCapabilities" Click="GetRouterRtpCapabilitiesButton_Click" HorizontalAlignment="Left" Margin="280,180,0,0" VerticalAlignment="Top" Width="95" Height="36" Grid.Column="1" IsEnabled="False"/>
         <TextBox x:Name="messageTextBox" HorizontalAlignment="Left" Height="41" Margin="82,113,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="311" Grid.ColumnSpan="2"/>
         <ListBox x:Name="messagesList" HorizontalAlignment="Left" Height="141" Margin="82,170,0,0" VerticalAlignment="Top" Width="311" RenderTransformOrigin="-0.304,0.109" BorderThickness="1" Grid.ColumnSpan="2" BorderBrush="Gainsboro"/>
